// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell 属性测试 cell autoHeight 1`] = `
<div
  class="mui-cell mui-cell_autoheight mui-cell_large"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell size cell size large 1`] = `
<div
  class="mui-cell mui-cell_large"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class="mui-cell__bd_title_mini"
    >
      cellTitle
    </p>
     
    <p
      class="mui-cell__bd_subtitle"
    >
      cellSubTitle
    </p>
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell size cell size middle 1`] = `
<div
  class="mui-cell mui-cell_middle"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class="mui-cell__bd_title_mini"
    >
      cellTitle
    </p>
     
    <p
      class="mui-cell__bd_subtitle"
    >
      cellSubTitle
    </p>
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell size cell size small 1`] = `
<div
  class="mui-cell mui-cell_small"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell size cell size xlarge 1`] = `
<div
  class="mui-cell mui-cell_xlarge"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class="mui-cell__bd_title_bold"
    >
      cellTitle
    </p>
     
    <p
      class="mui-cell__bd_subtitle"
    >
      cellSubTitle
    </p>
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell subTitle 1`] = `
<div
  class="mui-cell mui-cell_large"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class="mui-cell__bd_title_mini"
    >
      cellTitle
    </p>
     
    <p
      class="mui-cell__bd_subtitle"
    >
      cellSubTitle
    </p>
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <p
      class="mui-cell__ft_placeholder"
    >
      
      
    
    </p>
     
    <p
      class=""
    >
       
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell subValue 1`] = `
<div
  class="mui-cell mui-cell_large"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class="mui-cell__ft_value"
    >
       cellValue
    </p>
     
    <p
      class="mui-cell__ft_subvalue"
    >
      cellSubValue
    </p>
  </div>
</div>
`;

exports[`Cell 属性测试 cell title,默认单行 1`] = `
<div
  class="mui-cell mui-cell_large"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      cellTitle
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <p
      class="mui-cell__ft_placeholder"
    >
      
      
    
    </p>
     
    <p
      class=""
    >
       
    </p>
     
    <!---->
  </div>
</div>
`;

exports[`Cell 属性测试 cell value 1`] = `
<div
  class="mui-cell mui-cell_large"
>
  <div
    class="mui-cell__hd"
  >
    <!---->
  </div>
   
  <div
    class="mui-cell__bd"
  >
    <p
      class=""
    >
      
    </p>
     
    <!---->
  </div>
   
  <div
    class="mui-cell__ft"
  >
    <!---->
     
    <p
      class=""
    >
       cellValue
    </p>
     
    <!---->
  </div>
</div>
`;
